# Particle-Life-Old

./: CMakeLists.txt  build.sh  configure.sh  run.sh
resources/: shader.vert
src/: main.cpp  particle.cpp  shader.cpp
src/include/: particle.h  shader.h
